control: keep shell service compatible with minSdk 26